deployments/game-data-proxy-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "game-data-proxy-v2"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "game-data-proxy"
        version: v2
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: "game-data-proxy"
        image: "gcr.io/sensedia-bet/matches-proxy"
        ports:
        - name: http
          containerPort: 9999
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: http
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 30
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: http
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 30
