deployments/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: "game-data"
  labels:
    app: "game-data"
spec:
  selector:
    app: "game-data"
  ports:
  - name: http
    port: 7777
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "game-data"
  labels:
    app: "game-data"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "game-data"
        tier: backend
        version: v1
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: "game-data"
        image: "gcr.io/sensedia-bet/game_data:latest"
        ports:
        - name: http
          containerPort: 7777
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 30
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 30
