deployments/world-cup-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wc-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - wc-gateway
  http:
  - match:
    - uri:
        exact: /api/matches
    route:
    - destination:
        host: game-data
        port:
          number: 7777
